--- a/style.css
+++ b/style.css
@@ -15,16 +15,71 @@ canvas {
     position: absolute;
 }
 
-.time-container {
+.game-info-container {
     position: absolute;
+    right: 0;
+}
+
+#topInfo {
+    display: flex;
+    flex-direction: row; 
+}
+
+#bottomInfo {
+    margin-top: .1rem;
+}
+
+#levelContainer span,
+#timeContainer span {
+    margin-top: .5rem;
+}
+
+.info-section {
+    position: relative;
     background-color: rgba(28, 28, 28, 0.662);
     color: white;
-    right: 0;
-    font-size: 1.2rem;
-    width: 8rem;
+    font-size: 1.25rem;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+#levelContainer {
+    width: 4rem;
+    margin-right: .1rem;
+}
+
+#timeContainer {
+    width: 8rem;
+}
+
+#checkpointContainer {
+    position: relative;
+}
+
+#event {
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+}
+
+#eventTitle {
+    position: absolute;
+    left: .5rem;
+}
+
+#eventTime {
+    position: absolute;
+    right: .5rem;
+}
+
+h4 {
+    position: absolute;
+    left: .5rem;
+    top: -.5rem;
+    font-weight: 400;
+    font-size: .8rem;
 }
 
 #timer {
