--- a/styles/style.css
+++ b/styles/style.css
@@ -120,6 +120,10 @@ h4 {
     width: 100%;
     height: 100%;
     background: rgba(250, 214, 157, 0.99);
+    background-image: url('../assets/images/menu_image.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     color: var(--text-color);
     display: flex;
     flex-direction: column;
@@ -158,4 +162,18 @@ h4 {
     flex-direction: column;
     align-items: flex-start;
     margin-left: 5%;
+}
+
+.fade-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(25, 24, 24);
+    clip-path: circle(0% at 50% 50%);
+    pointer-events: none;
+    z-index: 500;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
 }
